--- a/default.html
+++ b/default.html
@@ -30,7 +30,7 @@
                         </button>
                     <a class="navbar-brand" href="index.html">
 
-                            LOGO
+                            Dosya Transferim.com
                         </a>
                 </div>
 
@@ -40,16 +40,9 @@
                             <a href="index.html">Ana Sayfa</a>
                         </li>
 
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hakkımızda
-                                    <span class="caret"></span>
+                        <li>
+                            <a href="hakkimizda.html">Hakkımızda
                                 </a>
-                            <ul class="dropdown-menu" aria-labelledby="about-us">
-                                <li>
-                                    <a href="default.html">Dosya Gönder</a>
-                                </li>
-
-                            </ul>
                         </li>
                         <li>
                             <a href="default.html">Dosya Transferi Yapın</a>
